--- a/ServiceTagPuller/ServiceTagPuller.csproj
+++ b/ServiceTagPuller/ServiceTagPuller.csproj
@@ -94,14 +94,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileExporter.cs" />
     <Compile Include="Forms\Main Form\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Main Form\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GetComputerList.cs" />
     <Compile Include="OpenCommandPrompt.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Prompt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\SettingsForm.cs">
       <SubType>Form</SubType>
