Initial rebase after working offline for far too long.

--- a/ServiceTagPuller/App.config
+++ b/ServiceTagPuller/App.config
@@ -16,6 +16,9 @@
             <setting name="Password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Domain" serializeAs="String">
+                <value />
+            </setting>
         </ServiceTagPuller.Properties.Settings>
     </userSettings>
 </configuration>
